--- a/hello_world.yml
+++ b/hello_world.yml
@@ -1,6 +1,4 @@
-- name: Hello World Sample
-  hosts: all
-  tasks:
-    - name: Hello Message
-      debug:
-        msg: "Hello World!"
+- name: Search-only, return list of found updates (if any), log to C:\ansible_wu.txt
+  ansible.windows.win_updates:
+    category_names: SecurityUpdates
+    state: searched
